# django_search_vector_model_mixin

./: README.md  pyproject.toml
src/django_search_vector_model_mixin/: mixins.py
