[project]
name = "django-search-vector-model-mixin"
version = "0.1.0"
description = "Model Mixin for Full Test Search in PostgreSQL with support of multilanguage sites"
authors = [
    {name = "Evgenii Legotckoi",email = "evgenii.legotckoi@gmail.com"}
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5",
    "Framework :: Django :: 6",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "django (==4.2)"
]

[project.urls]
homepage = "https://evileg.com"
repository = "https://github.com/Legotckoi/django_search_vector_model_mixin"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
